Started writing the thesis. Nothing impressive yet - just a template containing an outline.

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,23 @@
 *vok
 *aux
 *glob
+
 *v.d
 *~
 makefile
 .coqdeps.d
 .makefile.d
+
+*.synctex.gz
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.toc
+*.pyg
+
+*.nav
+*.snm
+
+.vscode
+_minted*
